--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,5 @@
-*{
-    font-family: 'Hind', sans-serif;
-}
-
-.header{
-    background-color: rgb(245, 231, 223);
-}
-
-.header h1{
-    font-size: 1.2rem;
+body{
+  overflow-x: hidden;
 }
 
 .div-1{
